# bird-chat

./: Cargo.toml  LICENSE  README.md
src/: color.rs  component.rs  formatting.rs  identifier.rs  lib.rs
