[package]
name = "cubic-chat"
version = "0.1.0"
edition = "2021"
description = "Minecraft components on rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"