[package]
name = "bird-chat"
version = "0.1.3"
edition = "2021"
description = "Minecraft components on rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
either = { version = "1.7.0", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }